--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
 
+        name: Run linter
+        run: flake8 app.py
+  
+
       - name: Run tests
         run: pytest test_app.py
