--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
 
-        name: Run linter
+      - name: Run linter
         run: flake8 app.py
   
 
